[tool]
[tool.poetry]
name = "pyentrypoint"
version = "0.7.3"
description = "pyentrypoint manages entrypoints in Docker containers."
license = "WTFPL"
classifiers = ["Programming Language :: Python", "Development Status :: 1 - Planning", "License :: OSI Approved :: BSD License", "Natural Language :: English", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 2", "Programming Language :: Python :: 3", "Programming Language :: Python :: 2.7", "Programming Language :: Python :: 3.6", "Topic :: System :: Installation/Setup"]
homepage = "http://github.com/cmehay/pyentrypoint"
authors = ["Christophe Mehay <cmehay@nospam.student.42.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6.1"
colorlog = "^4.1"
jinja2 = "^2.11"
pyyaml = "^5.3"
six = "^1.14"
watchdog = "^0.10"


[tool.poetry.dev-dependencies]
docker-compose = "^1.25.5"
pytest = "^5.4.2"
pytest-mock = "^3.1.0"
pre-commit = "^2.3.0"

[build-system]
requires = ["poetry>=1.0.8"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
pyentrypoint = "pyentrypoint.__main__:main"
