[tool]
[tool.poetry]
name = "pyentrypoint"
version = "0.8.0"
description = "pyentrypoint manages entrypoints in Docker containers."
license = "WTFPL"
classifiers = ["Programming Language :: Python", "Development Status :: 1 - Planning", "License :: OSI Approved :: BSD License", "Natural Language :: English", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 2", "Programming Language :: Python :: 3", "Programming Language :: Python :: 2.7", "Programming Language :: Python :: 3.6", "Topic :: System :: Installation/Setup"]
homepage = "http://github.com/cmehay/pyentrypoint"
authors = ["Christophe Mehay <cmehay@nospam.student.42.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python =  ">= 3.8.0, < 3.11"
colorlog = "*"
jinja2 = "*"
pyyaml = "*"
six = "*"
watchdog = "^0.10"
toml = "*"


[tool.poetry.dev-dependencies]
docker-compose = "*"
pytest = "*"
pytest-mock = "*"
pre-commit = "*"

[build-system]
requires = ["poetry>=1.0.8"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
pyentrypoint = "pyentrypoint.__main__:main"
